@@ -7,7 +7,7 @@
 @settitle PoCC - The Polyhedral Compiler Collection package
 
 @set EDITION 0.1
-@set VERSION 0.1.0
+@set VERSION 1.0-beta
 @set UPDATED April 27th 2009
 @setchapternewpage odd
 
