@@ -71,6 +71,6 @@ pocc_SOURCES		=			\
 	getopts.c				\
 	options.c
 
-pocc_LDADD		= $(top_srcdir)/driver/pocc/libpocc.la
+pocc_LDADD		= $(top_builddir)/driver/pocc/libpocc.la
 
 #############################################################################
