@@ -1,3 +1,14 @@
+2009-06-19  Louis-Noel Pouchet  <louis-noel.pouchet@inria.fr>
+	Commit the 06/12/2009 bump to 1.0-beta, and some minor updates.
+
+	* driver/pocc/Makefile.am,
+	* driver/pocc/driver-pluto.c,
+	* driver/src/Makefile.am,
+	* driver/src/options.c,
+	* README,
+	* configure.ac,
+	* doc/pocc.texi,
+
 2009-05-13  Louis-Noel Pouchet  <louis-noel.pouchet@inria.fr>
 
 	* driver/pocc/driver-letsee.c,
